--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/pricemonitoring
 spring.datasource.username=postgres
 spring.datasource.password=pricemonitoring
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 
 spring.liquibase.change-log=classpath:db/liquibase-changelog.xml
