--- a/build.gradle
+++ b/build.gradle
@@ -22,10 +22,14 @@ configurations {
 }
 
 repositories {
+	gradlePluginPortal()
+	google()
 	mavenCentral()
 }
 
 dependencies {
+	implementation 'org.jsoup:jsoup:1.15.3'
+
 	implementation 'org.liquibase:liquibase-core'
 //	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 //	implementation 'org.springframework.boot:spring-boot-starter-data-cassandra'
@@ -48,6 +52,7 @@ dependencies {
 //	testImplementation 'org.springframework.amqp:spring-rabbit-test'
 //	testImplementation 'org.springframework.graphql:spring-graphql-test'
 //	testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation 'io.mockk:mockk:1.12.0'
 }
 
 tasks.withType(KotlinCompile) {
