--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,5 @@ spring.liquibase.enabled=true
 # EXCHANGERATE-API (https://app.exchangerate-api.com/)
 exchangeratesapi.api-key=${YOUR_KEY}
 
-#schedules
+# SCHEDULED
 capture.cron.scheduled=0 0 8 * * *
