--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,7 +8,8 @@ services:
     hostname: postgres_pricemonitoring
     restart: always
     environment:
-      POSTGRES_PASSWORD: pricemonitoring
+      - "TZ=America/Sao_Paulo"
+      - "POSTGRES_PASSWORD: pricemonitoring"
     ports:
       - "5432:5432"
     volumes:
@@ -21,6 +22,8 @@ services:
     image: adminer
     container_name: adminer_docker
     hostname: adminer_docker
+    environment:
+      - "TZ=America/Sao_Paulo"
     restart: always
     ports:
       - 8090:8080
@@ -32,7 +35,9 @@ services:
     container_name: price-monitoring
     hostname: price-monitoring
     environment:
+       - "TZ=America/Sao_Paulo"
        - "SPRING_PROFILES_ACTIVE=docker"
+
     restart: always
     ports:
       - 8080:8080
