--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
     - name: Setup Temurin JDK
       uses: actions/setup-java@v2
       with:
+        distribution: 'temurin'
         java-version: '21'
 
     - name: Build project
