--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,9 @@ jobs:
         java-version: '21'
 
     - name: Build project
-      run: ./gradlew build
+      run: |
+        chmod +x ./gradlew
+        ./gradlew build
     
     - name: Setup Docker Buildx
       uses: docker/setup-buildx-action@v1
