--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,8 @@ jobs:
         cache: gradle
 
     - name: Build project
-      run: |
+      run:
         ls
-        chmod +x ./gradlew
-        ./gradlew build
     
     - name: Setup Docker Buildx
       uses: docker/setup-buildx-action@v1
