--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       run: |
         ls
         chmod +x ./gradlew
-        # ./gradlew build
+        ./gradlew build
     
     # - name: Setup Docker Buildx
     #   uses: docker/setup-buildx-action@v1
