--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,15 +21,14 @@ jobs:
 
     - name: Build project
       run: |
-        ls
         chmod +x ./gradlew
         ./gradlew build
     
-    # - name: Setup Docker Buildx
-    #   uses: docker/setup-buildx-action@v1
+    - name: Setup Docker Buildx
+      uses: docker/setup-buildx-action@v1
 
-    # - name: Login to Docker Hub
-    #   run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+    - name: Login to Docker Hub
+      run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
-    # - name: Build Docker image
-    #   run: docker buildx build --platform linux/amd64,linux/arm64 -t dcbasso/price-monitoring:latest . --push
+    - name: Build Docker image
+      run: docker buildx build --platform linux/amd64,linux/arm64 -t dcbasso/price-monitoring:latest . --push
