--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,4 +31,4 @@ jobs:
       run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
     - name: Build Docker image
-      run: docker buildx build --platform linux/amd64,linux/arm64 -t dcbasso/price-monitoring:latest . --push
+      run: docker buildx build --platform linux/amd64,linux/arm64 -t dcbasso/price-monitoring:latest -f docker/Dockerfile . --push
