--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,6 +2,10 @@ FROM eclipse-temurin:21.0.2_13-jre
 
 ENV spring.datasource.username=postgres
 ENV spring.datasource.password=pricemonitoring
+ENV exchangeratesapi.api-key=
+ENV TZ=America/Sao_Paulo
+ENV capture.cron.scheduled=0 0 * * * *
+ENV SPRING_PROFILES_ACTIVE=docker
 
 COPY ../build/libs/pricemonitoring.jar /app/pricemonitoring.jar
 
