Tag creation action

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,7 +4,7 @@ ENV spring.datasource.username=postgres
 ENV spring.datasource.password=pricemonitoring
 ENV exchangeratesapi.api-key=
 ENV TZ=America/Sao_Paulo
-ENV capture.cron.scheduled="0 0 * * * *"
+ENV capture.cron.scheduled="0 0 8-17 * * *"
 ENV SPRING_PROFILES_ACTIVE=docker
 
 COPY ../build/libs/pricemonitoring.jar /app/pricemonitoring.jar
