--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
 	implementation 'io.projectreactor.kotlin:reactor-kotlin-extensions'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 //	implementation 'org.jetbrains.kotlin:kotlin-reflect'
 //	implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-reactor'
 	compileOnly 'org.projectlombok:lombok'
