--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,25 @@ exchangeratesapi.api-key=${YOUR_KEY}
 
 # SCHEDULED
 capture.cron.scheduled=0 0 8 * * *
+
+#EMAIL SERVICE
+spring.mail.host=smtp.dreamhost.com
+spring.mail.port=465
+spring.mail.username=${YOUR_EMAIL}
+spring.mail.password=${YOUR_PASSWORD}
+spring.mail.properties.debug=true
+spring.mail.properties.transport.protocol=smtp
+spring.mail.properties.mail.smtp.username=${YOUR_EMAIL}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.properties.mail.smtp.from=${YOUR_EMAIL}
+spring.mail.test-connection=true
+
+notification.email.enabled=true
+notification.email.destiny=${YOUR_EMAIL_DESTINY}
+notification.email.identification=${YOUR_EMAIL_IDENTIFICATION}
