--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,9 @@ spring.liquibase.enabled=true
 exchangeratesapi.api-key=${YOUR_KEY}
 
 # SCHEDULED
-capture.cron.scheduled=0 0 8 * * *
+capture.cron.scheduled=0 0 8-17 * * *
 
-#EMAIL SERVICE
+# EMAIL SERVICE
 spring.mail.host=smtp.dreamhost.com
 spring.mail.port=465
 spring.mail.username=${YOUR_EMAIL}
