Added integration with topdek and some improvements

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -25,6 +25,9 @@ ENV spring.mail.test-connection=true
 ENV notification.email.enabled=true
 ENV notification.email.destiny=${YOUR_EMAIL_DESTINY}
 ENV notification.email.identification=${YOUR_EMAIL_IDENTIFICATION}
+ENV jobs.enabled=true
+ENV jobs.stores.list=visaovip, topdek
+ENV jobs.extras.list=currencyquote
 
 COPY ../build/libs/pricemonitoring.jar /app/pricemonitoring.jar
 
