--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,8 @@ spring.mail.test-connection=true
 notification.email.enabled=true
 notification.email.destiny=${YOUR_EMAIL_DESTINY}
 notification.email.identification=${YOUR_EMAIL_IDENTIFICATION}
+
+# JOBS
+jobs.enabled=true
+jobs.stores.list=visaovip, topdek
+jobs.extras.list=currencyquote
