fix docker file

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -26,8 +26,8 @@ ENV notification.email.enabled=true
 ENV notification.email.destiny=${YOUR_EMAIL_DESTINY}
 ENV notification.email.identification=${YOUR_EMAIL_IDENTIFICATION}
 ENV jobs.enabled=true
-ENV jobs.stores.list=visaovip, topdek
-ENV jobs.extras.list=currencyquote
+ENV jobs.stores.list="visaovip, topdek"
+ENV jobs.extras.list="currencyquote"
 
 COPY ../build/libs/pricemonitoring.jar /app/pricemonitoring.jar
 
