--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,9 @@ dependencies {
 //	testImplementation 'org.springframework.graphql:spring-graphql-test'
 //	testImplementation 'org.springframework.security:spring-security-test'
 	testImplementation 'io.mockk:mockk:1.12.0'
+	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.+' // para JUnit 5
+	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.+' // para JUnit 5
+
 }
 
 tasks.withType(KotlinCompile) {
