--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -51,3 +51,12 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           reason: "Um dos processos do build falhou. Verifique os logs e corrija o problema antes de mesclar este pull request."
+
+  notify-success:
+    runs-on: ubuntu-latest
+    needs: build
+    if: ${{ success() }}
+
+    steps:
+      - name: Notify success
+        run: echo "O processo de build foi concluído com sucesso. O pull request pode ser mesclado."
