--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -30,6 +30,7 @@ jobs:
           java-version: '21'
 
       - name: Build project
+        if: github.event_name != 'push' || github.event.ref != 'refs/heads/main'
         run: |
           chmod +x ./gradlew
           ./gradlew build
